--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- about section-->
     <section id="about">
         <div class="container mt-4 pt-4">
-            <h1 class="text-center">About Me</h1>
+            <h1 class="text-center">Isaiah Hogue</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
                     <img src="images/face.jpg" class= "imageAboutPage" alt="">
@@ -68,7 +68,6 @@
                     <div class="row mt-3">
                         <div class="col-md-7">
                             <ul>
-                                <li>Name: Isaiah Hogue</li>
                                 <li>Age: 21</li>
                                 <li>Occupation: Looking for work in software development</li>
     
