--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Kairos</h4>
                             <p class="card-text">2022 - 2023 Senior Project. Team Atrius: Isaiah Hogue, Noah Gallo, Colby Nelson, Tre Carlton, Nathaniel Kanooni. A Real Time Strategy game built in Unity.</p>
+                            <p>I worked as one the developers, especially in unit behavior and basic RTS controls</p>
                             <div class="text-center">
                                 <a href="https://store.steampowered.com/app/2224090/Kairos/" class="btn btn-success">Link</a>
                             </div>
