--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
                     <div class="row mt-3">
                         <p> I am a student at Seattle Pacific University pursuing a Bachelor of Arts in Computer Science. I've always enjoyed making things work, and in today's world, what better to make work than software?
                              My degree in Computer Science has equipped me with the skills necessary to be a competent and ever improving addition to any team.
-                              While I am most interested in backend development, I am seeking opportunities to broaden my skills at all levels of software development.
+                              While I am most interested in backend development, I am seeking opportunities to broaden my skills at all levels of software development. 
                         </p>
+                        <p>After one summer class, I'll be receiving my degree towards the end of 2023.</p>
                     </div>
                 </div>
             </div>
