--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
 </section>
 
 <section>
-      <div class="certcenter">
+      <div class="">
+        <div class="container mt-3 w-25">
         <h1 class="text-center">Certifications</h1>
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/AWS.png" alt="Card image" style="width:100%">
@@ -153,7 +154,7 @@
                     </div>
                 </div>
             </div>
-</section>
+      </div>
     
     <!-- contact section-->
     <section id="contact">
